--- a/src/renderer/scss/all.scss
+++ b/src/renderer/scss/all.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@import '~@lbry/color/lbry-color', 'reset', 'vars', 'gui', 'component/syntax-highlighter',
+@import '~@lbry/color/lbry-color', 'reset', 'type', 'vars', 'gui', 'component/syntax-highlighter',
   'component/table', 'component/button', 'component/card', 'component/file-download',
   'component/form-field', 'component/header', 'component/menu', 'component/tooltip',
   'component/load-screen', 'component/channel-indicator', 'component/notice', 'component/modal',
