--- a/src/renderer/scss/component/_modal.scss
+++ b/src/renderer/scss/component/_modal.scss
@@ -86,7 +86,7 @@
   margin: 0 $spacing-vertical * 1/3;
 
   &.btn--link {
-    // So the text isn"t bigger than the text inside the button
+    // So the text is not bigger than the text inside the button
     font-size: 0.8em;
   }
 }
