--- a/src/renderer/scss/component/_search.scss
+++ b/src/renderer/scss/component/_search.scss
@@ -39,11 +39,11 @@
 }
 
 .wunderbar__menu {
-  background-color: transparent; // !important
-  border-radius: 0 0 3px 3px; // !important
+  background-color: transparent;
+  border-radius: 0 0 3px 3px;
   max-width: 100px;
   overflow-x: hidden;
-  padding: 0; // !important
+  padding: 0;
 }
 
 .wunderbar__suggestion {
