--- a/src/renderer/scss/component/_syntax-highlighter.scss
+++ b/src/renderer/scss/component/_syntax-highlighter.scss
@@ -1,10 +1,8 @@
-/*!
-  Name: one-dark 1.1.1
-  Author: Török Ádám (http://github.com/Aerobird98)
-  Original Atom One Dark Theme (https://github.com/atom/one-dark-ui & https://github.com/atom/one-dark-syntax)
-*/
+// Name: one-dark 1.1.1
+// Author: Török Ádám (http://github.com/Aerobird98)
+// Original Atom One Dark Theme (https://github.com/atom/one-dark-ui & https://github.com/atom/one-dark-syntax)
 
-/* basic */
+// basic
 .CodeMirror {
   &.cm-s-one-dark {
     color: #abb2bf;
