--- a/src/renderer/scss/component/_tooltip.scss
+++ b/src/renderer/scss/component/_tooltip.scss
@@ -24,8 +24,8 @@
     background-color: $lbry-gray-5;
     border-radius: 8px;
     color: $lbry-white;
-    font-family: 'metropolis-medium';
     font-size: 12px;
+    font-weight: 500;
     padding: $spacing-vertical * 1/3;
     position: absolute;
     text-align: center;
