--- a/static/themes/dark.css
+++ b/static/themes/dark.css
@@ -1,7 +1,7 @@
 :root {
 
   /* Colors */
-  --color-divider: #53637C;;
+  --color-divider: #53637C;
   --color-canvas: transparent;
   --color-help: #8696AF;
   --color-download: rgba(255, 255, 255, 0.75);
