--- a/src/renderer/scss/component/_nav.scss
+++ b/src/renderer/scss/component/_nav.scss
@@ -34,18 +34,22 @@
   }
 
   .btn {
-    font: normal 400 16px/36px 'metropolis-semibold';
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 36px;
 
     &:hover {
       color: $lbry-black;
     }
 
     @media only screen and (min-width: $medium-breakpoint) {
-      font: normal 400 18px/40px 'metropolis-semibold';
+      font-size: 18px;
+      line-height: 40px;
     }
 
     @media only screen and (min-width: $large-breakpoint) {
-      font: normal 400 21px/50px 'metropolis-semibold';
+      font-size: 21px;
+      line-height: 50px;
     }
   }
 }
@@ -55,14 +59,19 @@
   padding-left: $spacing-vertical * 2/3;
 
   .btn {
-    font: normal 400 14px/30px 'metropolis-medium';
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 30px;
 
     @media only screen and (min-width: $medium-breakpoint) {
-      font: normal 400 15px/30px 'metropolis-semibold';
+      font-size: 15px;
+      font-weight: 600;
+      line-height: 30px;
     }
 
     @media only screen and (min-width: $large-breakpoint) {
-      font: normal 400 18px/40px 'metropolis-medium';
+      font-size: 18px;
+      line-height: 40px;
     }
   }
 }
