--- a/src/renderer/scss/all.scss
+++ b/src/renderer/scss/all.scss
@@ -33,3 +33,4 @@
 @import 'component/_time.scss';
 @import 'component/_icon.scss';
 @import 'component/_placeholder.scss';
+@import 'component/_badge.scss';
